## Process this file with automake to produce Makefile.in

all: \
	WineCellar_A.msh \
	BlockWall_N.msh \
	BlockWall_A.msh \
	StoneWall_A.msh \
	Ladder_A.msh \
	LadderEnd_A.msh \
	Mushrooms_A.msh \
	PlaceMat_A.msh \
	Knife_A.msh \
	CorkScrew_A.msh \
	WineBottle_A.msh \
	WineGlass_A.msh \
	Apple_A.msh \
	Bread_A.msh \
	Cheese_A.msh \
	Grapes_A.msh \
	Skull_A.msh \
	EdgeDrain_A.msh \
	AirVent_A.msh

WineCellar_A.msh: WineCellar_A.ply
	perl compile-mesh.pl WineCellar_A.ply

BlockWall_N.msh: BlockWall_N.ply
	perl compile-mesh.pl BlockWall_N.ply

BlockWall_A.msh: BlockWall_A.ply
	perl compile-mesh.pl BlockWall_A.ply

StoneWall_A.msh: StoneWall_A.ply
	perl compile-mesh.pl StoneWall_A.ply

Ladder_A.msh: Ladder_A.ply
	perl compile-mesh.pl Ladder_A.ply
	
LadderEnd_A.msh: LadderEnd_A.ply
	perl compile-mesh.pl LadderEnd_A.ply

Mushrooms_A.msh: Mushrooms_A.ply
	perl compile-mesh.pl Mushrooms_A.ply

PlaceMat_A.msh: PlaceMat_A.ply
	perl compile-mesh.pl PlaceMat_A.ply

Knife_A.msh: Knife_A.ply
	perl compile-mesh.pl Knife_A.ply

CorkScrew_A.msh: CorkScrew_A.ply
	perl compile-mesh.pl CorkScrew_A.ply

WineBottle_A.msh: WineBottle_A.ply
	perl compile-mesh.pl WineBottle_A.ply

WineGlass_A.msh: WineGlass_A.ply
	perl compile-mesh.pl WineGlass_A.ply

Apple_A.msh: Apple_A.ply
	perl compile-mesh.pl Apple_A.ply

Bread_A.msh: Bread_A.ply
	perl compile-mesh.pl Bread_A.ply

Cheese_A.msh: Cheese_A.ply
	perl compile-mesh.pl Cheese_A.ply
	
Grapes_A.msh: Grapes_A.ply
	perl compile-mesh.pl Grapes_A.ply

Skull_A.msh: Skull_A.ply
	perl compile-mesh.pl Skull_A.ply

EdgeDrain_A.msh: EdgeDrain_A.ply
	perl compile-mesh.pl EdgeDrain_A.ply
	
AirVent_A.msh: AirVent_A.ply
	perl compile-mesh.pl AirVent_A.ply
